<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/bandera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pais_descripcion_china"
                android:src="@drawable/bandera_china" />

            <TextView
                android:id="@+id/pais_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pais_nombre_china"
                android:textColor="@color/texto_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/bandera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pais_descripcion_india"
                android:src="@drawable/bandera_india" />

            <TextView
                android:id="@+id/pais_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pais_nombre_india"
                android:textColor="@color/texto_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/bandera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pais_descripcion_indonesia"
                android:src="@drawable/bandera_indonesia" />

            <TextView
                android:id="@+id/pais_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pais_nombre_indonesia"
                android:textColor="@color/texto_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/bandera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pais_descripcion_pakistan"
                android:src="@drawable/bandera_pakistan" />

            <TextView
                android:id="@+id/pais_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pais_nombre_pakistan"
                android:textColor="@color/texto_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/bandera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pais_descripcion_bangladesh"
                android:src="@drawable/bandera_bangladesh" />

            <TextView
                android:id="@+id/pais_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pais_nombre_bangladesh"
                android:textColor="@color/texto_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/bandera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pais_descripcion_rusia"
                android:src="@drawable/bandera_rusia" />

            <TextView
                android:id="@+id/pais_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pais_nombre_rusia"
                android:textColor="@color/texto_color" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
